finally fixed that annoying gap

--- a/public/style/main.css
+++ b/public/style/main.css
@@ -101,7 +101,8 @@ article.project img{
 }
 article.stick {
     position:sticky;
-    top:110px;
+    top:88px;
+    margin-right:8px;
 }
 footer{
     color : #585860;
